--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: node_js
+
+os: osx
+
 node_js:
-  - '8'
+  - 10
+  
+script:
+  - npm innstal
+  - npm start
+
+cache:
+  yarn: true
+  directories:
+    - node_modules
